--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
     "@nestjs/core": "10.3.2",
     "@nestjs/platform-express": "10.3.8",
     "@nestjs/swagger": "7.2.0",
+    "@nestjs/typeorm": "^10.0.2",
     "class-transformer": "0.5.1",
     "class-validator": "0.14.1",
     "reflect-metadata": "0.2.1",
     "rimraf": "5.0.5",
-    "rxjs": "7.8.1"
+    "rxjs": "7.8.1",
+    "typeorm": "^0.3.20"
   },
   "devDependencies": {
     "@nestjs/cli": "10.3.2",
